Challenge/challenge-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quote-app
  namespace: staging
spec:
  selector:
    app: quote-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
